gitops/apps/homarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - containerPort: 7575
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
