gitops/apps/homarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: homarr
  ports:
    - name: http
      port: 7575
      targetPort: 7575
      protocol: TCP
