gitops/apps/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/name: Homarr
    gethomepage.dev/icon: homarr.png
    gethomepage.dev/description: Dashboard
    gethomepage.dev/href: "http://homarr.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: homarr.omerlevy03.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
    - host: homarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
